--- a/plots.Rmd
+++ b/plots.Rmd
@@ -101,7 +101,7 @@ df_ip <- select(df_ip, date, variable = series_id, value)
 
 Merge datasets and produce plot of total rigs (oil + gas + miscellaneous) and drilling activity
 
-```{r, results='hide'}
+```{r}
 # plot total number of rigs and drilling activity
 df_bh %>% filter(units == "2012 = 100") %>% 
           select(-units) %>%
@@ -113,7 +113,7 @@ df_bh %>% filter(units == "2012 = 100") %>%
           xlab("")+
           scale_color_discrete(name = "", labels = c("ip: drilling oil & gas wells", "rig count"))+
           scale_x_date(date_breaks = "4 years", date_labels = "%Y")+
-          theme(axis.text.x = element_text(angle = 0))
+          theme(axis.text.x = element_text(angle = 0))+
           labs(title = "United States: drilling activity",
                subtitle = "number of rotary rigs and industrial production",
                caption = "Monthly data. Source: Baker Hughes, Federal Reserve")
