save plots to png

--- a/plots.Rmd
+++ b/plots.Rmd
@@ -111,12 +111,13 @@ df_bh %>% filter(units == "2012 = 100") %>%
           geom_line()+
           ylab("Index (2012 = 100)")+
           xlab("")+
-          scale_color_discrete(name = "", labels = c("ip: drilling oil & gas wells", "rig count"))+
+          scale_color_discrete(name = "", labels = c("ip: oil & gas well drilling", "rig count"))+
           scale_x_date(date_breaks = "4 years", date_labels = "%Y")+
           theme(axis.text.x = element_text(angle = 0))+
           labs(title = "United States: drilling activity",
                subtitle = "number of rotary rigs and industrial production",
                caption = "Monthly data. Source: Baker Hughes, Federal Reserve")
+ggsave("plot_rigs_ip.png")
 ```
 
 Another interesting aspect of the Baker Hughes rig count data is the split between oil and gas wells:
@@ -131,6 +132,12 @@ df_bh %>% filter(variable %in% c("Oil", "Gas"),
           labs(title = "Number of rotary rigs in the United States",
                caption = "Monthly data. Source: Baker Hughes",
                y = "", x = "")
+ggsave("plot_oil_and_gas_rigs.png")
 ```
 
+## Export data
+
+```{r}
+
+```
 
